Fixed a bug where hashing was not displaying correctly in dark mode on the 8710 report page. Added better print support for Contour, and the 8710 report page in particular.

--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
- 
+
+@layer utilities {
+  .print-color-adjust-exact {
+    -webkit-print-color-adjust: exact;
+  }
+
+  .print-color-adjust-economy {
+    -webkit-print-color-adjust: economy;
+  }
+}
+
+@page {
+  size: auto;
+  margin: 0mm;
+}
+
 @layer base {
   :root {
       --background: 0 0% 100% /* white */;
